<resources>
    <string name="app_name">Calculator</string>
    <string name="memclear">MC</string>
    <string name="help">?</string>
    <string name="memrecall">MR</string>
    <string name="clear">AC</string>
    <string name="backspace">&lt;</string>
    <string name="memsub">M-</string>
    <string name="memadd">M+</string>
    <string name="divide">&#247;</string>
    <string name="multiply">*</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sub">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="sign">+/-</string>
    <string name="def">0</string>
    <string name="base2">B<sub>2</sub></string>
    <string name="base8">B<sub>8</sub></string>
    <string name="base10">B<sub>10</sub></string>
    <string name="hex">Hx</string>
    <string name="start">Start</string>
    <string name="welcomeTitle">Welcome!</string>
    <string name="welcomeText">Thank you for using my calculator. Press start to begin.</string>
    <string name="author">By Ashley Kuipers</string>
    <string name="saveButton">Save</string>
    <string name="discardButton">&lt;- Back</string>
    <string name="negColorText">Show negative numbers in red</string>
    <string name="darkModeText">Dark Mode</string>
    <string name="fontSizeRadio">A</string>
    <string name="fontSizeText">Font Size</string>
</resources>