<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/lightest"
            android:padding="8dp"
            android:textAlignment="textEnd"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/t_calc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="12"
            android:background="@color/lightest"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/def"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:autoSizeMaxTextSize="40sp"
            app:autoSizeMinTextSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/t_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAlignment="textEnd"
        android:textSize="14sp" />

    <FrameLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <TableLayout
        android:id="@+id/calc_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/row_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/b_memadd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:text="@string/memadd"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_memsub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:text="@string/memsub"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:text="@string/clear"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_backspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:text="@string/backspace"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/b_memclear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:text="@string/memclear"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_memrecall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:text="@string/memrecall"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_sign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:text="@string/sign"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:text="@string/divide"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/b_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/seven"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/eight"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/nine"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:text="@string/multiply"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/b_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/four"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/five"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/six"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_sub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:text="@string/sub"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/b_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/one"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/two"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/three"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:text="@string/add"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/b_help"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/help"
                android:textSize="28sp" />

            <Button
                android:id="@+id/b_decimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/decimal"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light"
                android:text="@string/zero"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/b_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark"
                android:text="@string/equal"
                android:textColor="@color/textlight"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>