<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Welcome">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/t_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/welcomeTitle"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="52sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/t_welcome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/b_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/dark"
        android:paddingStart="40dp"
        android:paddingTop="8dp"
        android:paddingEnd="40dp"
        android:paddingBottom="8dp"
        android:text="@string/start"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t_welcome3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/author"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="20sp" />

</LinearLayout>