<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/background"
    android:gravity="bottom|center"
    android:orientation="vertical"
    tools:context=".Settings">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/t_darkMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/darkModeText"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/s_darkMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColor="@color/text"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/t_negColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/negColorText"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/s_negColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColor="@color/text"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/t_fontSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingTop="8dp"
                android:text="@string/fontSizeText"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:buttonTint="@color/dark"
                    android:paddingEnd="8dp"
                    android:text="@string/fontSizeRadio"
                    android:textColor="@color/text" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:buttonTint="@color/dark"
                    android:checked="true"
                    android:paddingEnd="8dp"
                    android:text="@string/fontSizeRadio"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:buttonTint="@color/dark"
                    android:text="@string/fontSizeRadio"
                    android:textColor="@color/text"
                    android:textSize="26sp" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <Button
                android:id="@+id/b_discard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:gravity="center"
                android:paddingLeft="28dp"
                android:paddingTop="8dp"
                android:paddingRight="28dp"
                android:paddingBottom="8dp"
                android:text="@string/discardButton"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/medium"
                android:gravity="center"
                android:paddingLeft="28dp"
                android:paddingTop="8dp"
                android:paddingRight="28dp"
                android:paddingBottom="8dp"
                android:text="@string/saveButton"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>